--- a/Summer_Olympics/Summer.ipynb
+++ b/Summer_Olympics/Summer.ipynb
@@ -465,22 +465,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1900"
+       "1928"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gold_medals_india = data[data[\"Country\"]==\"IND\"][\"Year\"]\n",
+    "gold_medals_india = data[(data[\"Country\"]==\"IND\") & (data[\"Medal\"]==\"Gold\")][\"Year\"]\n",
     "gold_medals_india.iloc[0]"
    ]
   },
